--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body>
     <div class="container">
       <div class="form-container">
+        <img src="PageImage.jpg" />
+        <h1>Sign In</h1>
         <form>
-          <img src="PageImage.jpg" />
-          <h1>Sign In</h1>
-          <input type="text" placeholder="Username" />
+          <input type="text" placeholder="Email" />
           <div class="custom-password">
             <input type="password" placeholder="Password" id="password" />
             <i
@@ -33,7 +33,7 @@
             <input type="checkbox" />
             <label>Remember me</label>
           </div>
-          <button class="btn">Sign In</button>
+          <button class="form-button">Sign In</button>
         </form>
       </div>
     </div>
